# AlephTav

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  LICENSE-code  LICENSE-text-template  NOTICE-template  README.md  package-lock.json  package.json  playwright.config.ts  pyproject.toml  requirements.md  setup.ps1  setup.sh  wip.md
.claude/: settings.json
.claude/agents/: alignment-reviewer.md  audit-trail-writer.md  llm-prompt-editor.md  release-checklist.md  validator.md
.claude/commands/: audit-report.md  fix-lint.md  link-issue.md  link-pr.md  lint.md  rebuild-indexes.md  refresh-goldens.md  release-report.md  seed-fixture.md  test-golden.md  test-integration.md  test-unit.md  validate.md  (+1 more)
.github/: CODEOWNERS  pull_request_template.md  settings.yml
app/: __init__.py  cli.py
content/: project.json
docs/: AUDIT_POLICY.md  CONTRIBUTING.md  DATA_SOURCES.md  README.md  RELEASE_PROCESS.md  REVIEW_POLICY.md  STYLE_PROFILES.md  TRANSLATION_POLICY.md
psalms_copyleft.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
schemas/: alignment.schema.json  audit_record.schema.json  project.schema.json  release_report.schema.json  rendering.schema.json  source_manifest.schema.json  style_profile.schema.json  token.schema.json  unit.schema.json
scripts/: __init__.py  audit_composer_quality.py  bootstrap_fixture_repo.py  build_indexes.py  generate_reports.py  import_psalms.py  link_issue.py  link_pr.py  refresh_goldens.py  seed_project.py  setup_rebuild_state.py  validate_content.py
tests/: composer_quality_support.py  conftest.py  support.py
(+2979 files in other folders)
