[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "psalms-copyleft"
version = "0.1.0"
description = "Local-first Psalms translation workbench"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE-code" }
authors = [
  { name = "AlphaOmega Contributors" }
]
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "typer>=0.12.3",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.3.4",
  "sqlalchemy>=2.0.31",
  "jsonschema>=4.23.0",
  "orjson>=3.10.6",
  "python-multipart>=0.0.9"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "httpx>=0.27.0",
  "ruff>=0.5.5",
  "mypy>=1.10.1"
]

[project.scripts]
psalms-workbench = "app.cli:app"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["app*"]

[tool.setuptools.package-data]
app = ["llm/prompts/*.md", "llm/contracts/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
check_untyped_defs = true
